--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ gcp:
   gpu_quota_name: "NVIDIA_L4_GPUS"
   machine_types: ["g2-standard-4", "g2-standard-8", "g2-standard-12", "g2-standard-16"]
 github:
-  repo_url: "git@github.com:zcox10/vector-db-rag.git"
+  repo_url: "git@github.com:zcox10/COMS6998-ML-Cloud.git"
   username: "zcox10"
   email: "zach.s.cox@gmail.com"
   ssh_key_path: "~/.ssh/zsc-ssh-mac"
